fix banner's background on ios

--- a/css/tablet.css
+++ b/css/tablet.css
@@ -5,6 +5,10 @@
   html {
     font-size: 56.25%; /* 9/16px*/
   }
+  /* BANNER */
+  #banner {
+    background-attachment: initial;
+  }
   /* NAVBAR */
   /* Hide Avartar */
   .avatar-border {
